<resources>
    <string name="app_name" translatable="false">LiveBack</string>

    <!-- Common words-->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>

    <!-- Error messages-->
    <string name="generic_error">Something went wrong! Please, try again later</string>
    <string name="required_field">This field is required!</string>
    <string name="incorrect_email">Enter correct email address</string>
    <string name="short_password">Password needs to be at least 8 characters long</string>
    <string name="different_passwords">Passwords don\'t match</string>
    <string name="image_upload_error">Could not upload picture.</string>
    <string name="signUp_error">Error with signing up</string>
    <string name="getUser_error">There was an error with getting your profile data. Please, try again later.</string>
    <string name="addEvent_error">Adding event failed! Please, try again later.</string>
    <string name="editEvent_error">Editing event failed! Please, try again later.</string>
    <string name="date_error">You need to select a date of your event!</string>
    <string name="category_error">You need select a category of you event!</string>
    <string name="event_error">Couldn\'t retrieve event! Try again later.</string>
    <string name="events_error">Couldn\'t retrieve events! Try again later.</string>
    <string name="comments_error">Couldn\'t retrieve comments! Try again later.</string>
    <string name="comment_add_error">Adding comment failed! Please, try again later.</string>
    <string name="add_vote_error">Adding vote failed! Please, try again later.</string>
    <string name="get_vote_error">Receiving votes failed! Please, try again later.</string>
    <string name="comment_edit_error">Editing comment failed! Please, try again later.</string>
    <string name="vote_edit_error">Editing vote failed! Please, try again later.</string>
    <string name="empty_votes">There are no votes to be displayed.</string>
    <string name="empty_comments">There are no comments to be displayed.</string>
    <string name="empty_events">There are no events to be displayed.</string>
    <string name="up_vote_error">Couldn\'t upvote! Please, try again later.</string>
    <string name="down_vote_error">Couldn\'t downvote! Please, try again later.</string>
    <string name="need_to_login">You need to login to access this feature!</string>
    <string name="profile_error">Couldn\'t retrieve profile! Try again later.</string>
    <string name="old_matches_new">Old password cannot match new one!</string>
    <string name="incorrect_email_password">Incorrect email or password!</string>
    <string name="incorrect_old_password">Enter correct old password!</string>
    <string name="incorrect_password">Enter correct password!</string>
    <string name="profile_update_error">Couldn\'t update profile! Please, try again later.</string>
    <string name="delete_account_error">Couldn\'t delete account! Please, try again later.</string>
    <string name="delete_event_error">Couldn\'t delete event! Please, try again later.</string>
    <string name="delete_comment_error">Couldn\'t delete comment! Please, try again later.</string>
    <string name="delete_vote_error">Couldn\'t delete vote! Please, try again later.</string>

    <!--Main Activity-->
    <string name="search">Search</string>
    <string name="search_button">Search Button</string>
    <string name="filter_button">Filter button</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!--Navigation drawer-->
    <string name="events">Events</string>
    <string name="your_profile">Your Profile</string>
    <string name="add_event">Add Event</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>

    <!--Signing-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_logging">Continue without logging</string>
    <string name="create_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_profile">Add profile photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo from gallery</string>
    <string name="no_camera">No camera detected! Photo can\'t be taken.</string>
    <string name="welcome">Welcome!</string>
    <string name="signed_out">You\'ve been signed out</string>

    <!--Event-->
    <string name="about">About</string>
    <string name="comments">Comments</string>
    <string name="vote">Vote</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="likes">Likes</string>
    <string name="seconds_short">s</string>
    <string name="minutes_short">m</string>
    <string name="hours_short">h</string>
    <string name="days_short">d</string>
    <string name="week_short">w</string>
    <string name="months_short">mo</string>
    <string name="years_short">y</string>
    <string name="add_comment">Add comment</string>
    <string name="add_vote">Add vote</string>
    <string name="subject">Subject</string>
    <string name="comment_successful">Comment added successfully!</string>
    <string name="vote_successful">Vote added successfully!</string>
    <string name="comment_edit_successful">Comment edited successfully!</string>
    <string name="vote_edit_successful">Vote edited successfully!</string>
    <string name="edit_comment">Edit comment</string>
    <string name="edit_vote">Edit vote</string>

    <!--Add Event-->
    <string name="add_background">Add background</string>
    <string name="category">Category</string>
    <string name="successful_add">Event added successfully!</string>
    <string name="successful_edit">Event edited successfully!</string>
    <string name="edit_event">Edit Event</string>

    <!--Settings-->
    <string name="change_password">Change Password</string>
    <string name="change_password_message">If you want to change your password, tap here.</string>
    <string name="notifications">Notifications</string>
    <string name="notification_comment_your">Comment added on your event</string>
    <string name="notification_comment_fav">Comment added on favorited event</string>
    <string name="notification_vote_your">Vote added on your event</string>
    <string name="notification_vote_fav">Vote added on favorited event</string>
    <string name="reminder">Reminder</string>
    <string name="add_reminder">Add reminder</string>
    <string name="name">Name</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="success_password_change">Password changed successfully.</string>
    <string name="none">None</string>
    <string name="ten_before">10 minutes before</string>
    <string name="thirty_before">30 minutes before</string>
    <string name="hour_before">1 hour before</string>
    <string name="two_hours_before">2 hours before</string>
    <string name="three_hours_before">3 hours before</string>
    <string name="six_hours_before">6 hours before</string>
    <string name="twelve_hours_before">12 hours before</string>
    <string name="twenty_four_hours_before">24 hours before</string>
    <string name="profile_successful">Profile updated successfully!</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_question">Delete account?</string>
    <string name="delete_account_info">If you want to delete your account, tap here.</string>
    <string name="delete_account_message">This will permanently delete your account and all data associated with it. Are you sure?</string>
    <string name="delete_account_successful">Your account was deleted successfully.</string>

    <!--Delete-->
    <string name="delete_event_question">Delete event?</string>
    <string name="delete_event">Delete event</string>
    <string name="delete_event_message">This will permanently delete this event and all data associated with it. Are you sure?</string>
    <string name="delete_comment_question">Delete comment?</string>
    <string name="delete_comment">Delete comment</string>
    <string name="delete_comment_message">This will permanently delete this comment. Are you sure?</string>
    <string name="delete_vote_question">Delete vote?</string>
    <string name="delete_vote">Delete vote</string>
    <string name="delete_vote_message">This will permanently delete this vote. Are you sure?</string>
    <string name="delete_event_successful">Event deleted successfully</string>
    <string name="delete_comment_successful">Comment deleted successfully</string>
    <string name="delete_vote_successful">Vote deleted successfully</string>

    <!--Filter-->
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="reset_filter">Reset filter</string>
    <string name="sort_by">Sort by</string>
    <string name="number_of_likes">Number of likes</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="time_interval">Time interval</string>
    <string name="select_time">Select time</string>
    
    <!--Notifications-->
    <string name="notification_vote_added">Someone just added a vote in %1$s event.</string>
    <string name="notification_comment_added">Someone just added a comment in %1$s event.</string>
    <string name="notification_vote_channel" translatable="false">Votes notifications</string>
    <string name="notification_comment_channel" translatable="false">Comments notifications</string>
    <string name="notification_reminder_channel" translatable="false">Event reminders</string>
    <string name="your_event_starts">Your event starts in</string>
    <string name="event_you_liked">Event you liked starts in</string>

    <!--Categories-->
    <string name="concert">Concert</string>
    <string name="free_time">Free Time</string>
    <string name="school">School</string>
    <string name="party">Party</string>
    <string name="restaurant">Restaurant</string>
    <string name="bar">Bar</string>
    <string name="sports">Sports</string>
    <string name="other">Other</string>
</resources>
