<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.aleksanderkapera.liveback.ui.widget.NavigationItem
        android:id="@+id/navigation_row_events"
        style="@style/NavigationItem"
        app:icon="@drawable/ic_calendar"
        app:title="@string/events" />

    <com.aleksanderkapera.liveback.ui.widget.NavigationItem
        android:id="@+id/navigation_row_profile"
        style="@style/NavigationItem"
        android:layout_below="@+id/navigation_row_events"
        app:icon="@drawable/ic_user_white"
        app:title="@string/your_profile" />

    <com.aleksanderkapera.liveback.ui.widget.NavigationItem
        android:id="@+id/navigation_row_addEvent"
        style="@style/NavigationItem"
        android:layout_below="@+id/navigation_row_profile"
        app:icon="@drawable/ic_add"
        app:title="@string/add_event" />

    <com.aleksanderkapera.liveback.ui.widget.NavigationItem
        android:id="@+id/navigation_row_settings"
        style="@style/NavigationItem"
        android:layout_below="@id/navigation_row_addEvent"
        app:icon="@drawable/ic_settings"
        app:title="@string/settings" />

    <com.aleksanderkapera.liveback.ui.widget.NavigationItem
        android:id="@+id/navigation_row_signing"
        style="@style/NavigationItem"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:icon="@drawable/ic_logout"
        app:title="@string/log_out" />
</RelativeLayout>