<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bgColor"
    android:padding="@dimen/spacing24">

    <TextView
        android:id="@+id/feedbackDialog_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/add_comment"
        android:textSize="@dimen/text20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.aleksanderkapera.liveback.ui.widget.InputView
        android:id="@+id/feedbackDialog_view_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing16"
        app:inputHint="@string/subject"
        app:inputIcon="@drawable/ic_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackDialog_text_title" />

    <com.aleksanderkapera.liveback.ui.widget.InputView
        android:id="@+id/feedbackDialog_view_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing16"
        app:inputHint="@string/description"
        app:inputIcon="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackDialog_view_subject" />
</android.support.constraint.ConstraintLayout>