<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/register_image_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/bg_register" />

    <TextView
        android:id="@+id/register_text_appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing32"
        android:fontFamily="@string/font_family_light"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="44sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/register_guide_right"
        app:layout_constraintStart_toStartOf="@id/register_guide_left"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/register_image_profile"
        android:layout_width="@dimen/icon82"
        android:layout_height="@dimen/icon82"
        android:layout_marginTop="@dimen/spacing16"
        app:layout_constraintEnd_toEndOf="@id/register_guide_right"
        app:layout_constraintStart_toStartOf="@id/register_guide_left"
        app:layout_constraintTop_toBottomOf="@+id/register_text_appName"
        app:srcCompat="@drawable/ic_rounded_add" />

    <android.support.constraint.Guideline
        android:id="@+id/register_guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing48" />

    <android.support.constraint.Guideline
        android:id="@+id/register_guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing48" />

    <EditText
        android:id="@+id/register_input_username"
        style="@style/Logging.Input"
        android:layout_marginBottom="@dimen/spacing16"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/register_input_email"
        app:layout_constraintEnd_toStartOf="@+id/register_guide_right"
        app:layout_constraintStart_toStartOf="@+id/register_guide_left" />

    <EditText
        android:id="@+id/register_input_email"
        style="@style/Logging.Input"
        android:layout_marginBottom="@dimen/spacing16"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/register_input_password"
        app:layout_constraintEnd_toStartOf="@+id/register_guide_right"
        app:layout_constraintStart_toStartOf="@+id/register_guide_left" />

    <EditText
        android:id="@+id/register_input_password"
        style="@style/Logging.Input"
        android:layout_marginBottom="@dimen/spacing16"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_input_confirm"
        app:layout_constraintEnd_toStartOf="@+id/register_guide_right"
        app:layout_constraintStart_toStartOf="@+id/register_guide_left" />

    <EditText
        android:id="@+id/register_input_confirm"
        style="@style/Logging.Input"
        android:layout_marginBottom="@dimen/spacing64"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_button_signUp"
        app:layout_constraintEnd_toStartOf="@+id/register_guide_right"
        app:layout_constraintStart_toStartOf="@+id/register_guide_left" />

    <Button
        android:id="@+id/register_button_signUp"
        style="@style/Logging.Button"
        android:layout_marginBottom="@dimen/spacing64"
        android:background="@drawable/bg_rounded_green"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_guide_right"
        app:layout_constraintStart_toStartOf="@+id/register_guide_left" />
</android.support.constraint.ConstraintLayout>